infrastructure/prod/k8s/istio/istio-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    name: istio-system
    component: service-mesh
    part-of: aikernel
    topology.istio.io/network: default
